3.9.2/_sources/plot_types/stats/violin.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "plot_types/stats/violin.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_plot_types_stats_violin.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_plot_types_stats_violin.py:


=============
violinplot(D)
=============
Make a violin plot.

See `~matplotlib.axes.Axes.violinplot`.

.. GENERATED FROM PYTHON SOURCE LINES 9-30



.. image-sg:: /plot_types/stats/images/sphx_glr_violin_001.png
   :alt: violin
   :srcset: /plot_types/stats/images/sphx_glr_violin_001.png, /plot_types/stats/images/sphx_glr_violin_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. code-block:: Python

    import matplotlib.pyplot as plt
    import numpy as np

    plt.style.use('_mpl-gallery')

    # make data:
    np.random.seed(10)
    D = np.random.normal((3, 5, 4), (0.75, 1.00, 0.75), (200, 3))

    # plot:
    fig, ax = plt.subplots()

    vp = ax.violinplot(D, [2, 4, 6], widths=2,
                       showmeans=False, showmedians=False, showextrema=False)
    # styling:
    for body in vp['bodies']:
        body.set_alpha(0.9)
    ax.set(xlim=(0, 8), xticks=np.arange(1, 8),
           ylim=(0, 8), yticks=np.arange(1, 8))

    plt.show()


.. _sphx_glr_download_plot_types_stats_violin.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: violin.ipynb <violin.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: violin.py <violin.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: violin.zip <violin.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
